--- a/web/velocity/src/index.html
+++ b/web/velocity/src/index.html
@@ -10,7 +10,6 @@
 
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
-<body>
-  <app-root></app-root>
+<body id="page-body">
 </body>
 </html>
