--- a/web/velocity/src/index.html
+++ b/web/velocity/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" id="scroll-id">
+<html lang="en" id="scroll-html-id">
 <head>
   <meta charset="utf-8">
   <title>Velocity</title>
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
-<body id="page-body">
+<body id="scroll-body-id">
 </body>
 </html>
